# scheduling-bazaar

./: README.md  fetch_satnogs-client_releases.sh  get-obs-sample-per-month.sh  pyproject.toml  satnogs-client-releases.csv
notebooks/: client-version-history-analysis.ipynb  client-version-history-analysis2.ipynb  client-version-history-data-extraction.ipynb  client-version-history-data-extraction2.ipynb
satbazaar2/: get-observations.py  get_observations.py  observations.py  requests_har.py
