[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "satbazaar"
version = "0.0.1"
description = "A package for satellite scheduling"
readme = "README.md"
authors = [
    { name = "Dan White", email = "dan.white@valpo.edu" },
]
license = "GPL-3.0-or-later"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "ephem",
    "intervaltree",
    "lxml",
    "requests",
    "requests-cache",
    "skyfield",
    "matplotlib",
    "numpy",
    "iso8601",
    "pyarrow>=18.0.0",
    "fastparquet>=2024.5.0",
    "pyrate-limiter>=3.7.0",
    "duckdb>=1.1.3",
    "hvplot>=0.11.1",
    "jupysql>=0.10.14",
    "toml>=0.10.2",
    "jupyterlab-execute-time>=3.2.0",
]
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "jupyterlab",
]

[project.urls]
Repository = "https://github.com/wiredlab/scheduling-bazaar"

[tool.hatch.build.targets.wheel]
packages = ["satbazaar2"]

[tool.uv]
dev-dependencies = [
    "ipympl>=0.9.4",
    "jupyter>=1.1.1",
]

[project.scripts]
get-observations = "satbazaar2.get_observations:main"
